--- a/xiaomi.html
+++ b/xiaomi.html
@@ -17,8 +17,162 @@
   <div id="first"></div>
     <div class="life">
       <ul class="life-left">
-        <li>
+        <li class="item-comment">
           <a href="">手机 电话卡</a>
+          <div class="chirldren">
+            <ul class="chirldren-list">
+              <li>
+                <a class="link" href="">
+                  <img src="images/xiaomi31_03.png" alt="">
+                  <span class="text">小米8 青春版</span>
+                </a>
+              </li>
+              <li>
+                  <a class="link" href="">
+                      <img src="images/xiaomi31_03.png" alt="">
+                      <span class="text">小米8 青春版</span>
+                 </a>
+              </li>
+              <li>
+                  <a class="link" href="">
+                      <img src="images/xiaomi31_03.png" alt="">
+                      <span class="text">小米8 青春版</span>
+                 </a>
+              </li>
+              <li>
+                  <a class="link" href="">
+                      <img src="images/xiaomi31_03.png" alt="">
+                      <span class="text">小米8 青春版</span>
+                  </a>
+              </li>
+              <li>
+                  <a class="link" href="">
+                      <img src="images/xiaomi31_03.png" alt="">
+                      <span class="text">小米8 青春版</span>
+                  </a>
+              </li>
+              <li>
+                  <a class="link" href="">
+                      <img src="images/xiaomi31_03.png" alt="">
+                      <span class="text">小米8 青春版</span>
+                  </a>
+              </li>
+            </ul>
+            <ul class="chirldren-list">
+                <li>
+                  <a class="link" href="">
+                    <img src="images/xiaomi31_03.png" alt="">
+                    <span class="text">小米8 青春版</span>
+                  </a>
+                </li>
+                <li>
+                    <a class="link" href="">
+                        <img src="images/xiaomi31_03.png" alt="">
+                        <span class="text">小米8 青春版</span>
+                   </a>
+                </li>
+                <li>
+                    <a class="link" href="">
+                        <img src="images/xiaomi31_03.png" alt="">
+                        <span class="text">小米8 青春版</span>
+                   </a>
+                </li>
+                <li>
+                    <a class="link" href="">
+                        <img src="images/xiaomi31_03.png" alt="">
+                        <span class="text">小米8 青春版</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="link" href="">
+                        <img src="images/xiaomi31_03.png" alt="">
+                        <span class="text">小米8 青春版</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="link" href="">
+                        <img src="images/xiaomi31_03.png" alt="">
+                        <span class="text">小米8 青春版</span>
+                    </a>
+                </li>
+              </ul>
+              <ul class="chirldren-list">
+                  <li>
+                    <a class="link" href="">
+                      <img src="images/xiaomi31_03.png" alt="">
+                      <span class="text">小米8 青春版</span>
+                    </a>
+                  </li>
+                  <li>
+                      <a class="link" href="">
+                          <img src="images/xiaomi31_03.png" alt="">
+                          <span class="text">小米8 青春版</span>
+                     </a>
+                  </li>
+                  <li>
+                      <a class="link" href="">
+                          <img src="images/xiaomi31_03.png" alt="">
+                          <span class="text">小米8 青春版</span>
+                     </a>
+                  </li>
+                  <li>
+                      <a class="link" href="">
+                          <img src="images/xiaomi31_03.png" alt="">
+                          <span class="text">小米8 青春版</span>
+                      </a>
+                  </li>
+                  <li>
+                      <a class="link" href="">
+                          <img src="images/xiaomi31_03.png" alt="">
+                          <span class="text">小米8 青春版</span>
+                      </a>
+                  </li>
+                  <li>
+                      <a class="link" href="">
+                          <img src="images/xiaomi31_03.png" alt="">
+                          <span class="text">小米8 青春版</span>
+                      </a>
+                  </li>
+                </ul>
+                <ul class="chirldren-list">
+                    <li>
+                      <a class="link" href="">
+                        <img src="images/xiaomi31_03.png" alt="">
+                        <span class="text">小米8 青春版</span>
+                      </a>
+                    </li>
+                    <li>
+                        <a class="link" href="">
+                            <img src="images/xiaomi31_03.png" alt="">
+                            <span class="text">小米8 青春版</span>
+                       </a>
+                    </li>
+                    <li>
+                        <a class="link" href="">
+                            <img src="images/xiaomi31_03.png" alt="">
+                            <span class="text">小米8 青春版</span>
+                       </a>
+                    </li>
+                    <li>
+                        <a class="link" href="">
+                            <img src="images/xiaomi31_03.png" alt="">
+                            <span class="text">小米8 青春版</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link" href="">
+                            <img src="images/xiaomi31_03.png" alt="">
+                            <span class="text">小米8 青春版</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link" href="">
+                            <img src="images/xiaomi31_03.png" alt="">
+                            <span class="text">小米8 青春版</span>
+                        </a>
+                    </li>
+                  </ul>
+          </div>
         </li>
         <li>
           <a href="">电视 盒子</a>
@@ -1240,6 +1394,12 @@
        <script>
            $('#first').load('gg.html .superstar');
            $('#last').load('gg.html .supergirl');
+      </script>
+      <script>
+               $(".item-comment").mouseenter(function(){
+                   $(".item-comment").addClass(".life-item");
+              });
+              
       </script>
 </body>
 
