--- a/sign.html
+++ b/sign.html
@@ -8,7 +8,7 @@
 <body>
     <!-- top -->
 	<div id="top">
-          <div class="top-con">
+          <div class="top-content">
               <img src="images/xiaomi3_03.jpg" alt="">
               <div class="topc-r">
 	              <p>小米商城</p>
