--- a/gg.html
+++ b/gg.html
@@ -187,11 +187,11 @@
           <div class="finish-top">
             <div class="finisht-top">
               <ul class="finisht-list">
-                <li>23324324324</li>
-                <li>23324324324</li>
-                <li>23324324324</li>
-                <li>23324324324</li>
-                <li>23324324324</li>
+                <li>预约维修服务</li>
+                <li>7天无理由退货</li>
+                <li>15天免费换货</li>
+                <li>满150元包邮</li>
+                <li>520余家售后网点</li>
               </ul>
             </div>
             <div class="finisht-link">
