--- a/shoppingcar.html
+++ b/shoppingcar.html
@@ -29,7 +29,7 @@
 
 
 
-
+      <!-- main -->
       <div class="page-main">
 
           <div class="container">
@@ -49,8 +49,77 @@
                   </div>      
               </div>
           </div>
-      </div>
+          <!-- commnet -->
+      <div class="shop-comment">
+           <h2 class="comment-title">
+               <span><p>买购物车中商品的人还买了</p></span>
+           </h2>
+           <div class="comment-ban">
+               <ul class="ban-items">
+                   <li>
+                       <a href="#"> 
+                           <img src="images/xiaomi33_03.jpg" alt="">
+                       </a> 
+                   </li>
+                   <li>
+                        <a href="#"> 
+                                <img src="images/xiaomi33_03.jpg" alt="">
+                            </a> 
+                   </li>
+                   <li>
+                        <a href="#"> 
+                                <img src="images/xiaomi33_03.jpg" alt="">
+                            </a> 
+                   </li>
+                   <li>
+                        <a href="#"> 
+                                <img src="images/xiaomi33_03.jpg" alt="">
+                            </a> 
+                   </li>
+                   <li>
+                        <a href="#"> 
+                                <img src="images/xiaomi33_03.jpg" alt="">
+                            </a> 
+                   </li>
+                   <li>
+                        <a href="#"> 
+                                <img src="images/xiaomi33_03.jpg" alt="">
+                            </a> 
+                   </li>
+                   <li>
+                        <a href="#"> 
+                                <img src="images/xiaomi33_03.jpg" alt="">
+                            </a> 
+                   </li>
+                   <li>
+                        <a href="#"> 
+                                <img src="images/xiaomi33_03.jpg" alt="">
+                            </a> 
+                   </li>
+                   <li>
+                        <a href="#"> 
+                                <img src="images/xiaomi33_03.jpg" alt="">
+                            </a> 
+                   </li>
+                   <li>
+                        <a href="#"> 
+                                <img src="images/xiaomi33_03.jpg" alt="">
+                            </a> 
+                   </li>
+               </ul>
+           </div>
+        
+       </div>
 
+
+
+
+
+
+
+
+      </div>
+      
 
 
         <div class="end"></div>
